load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "plugin.go",
        "progress.go",
    ],
    importpath = "github.com/example/project/packer-post-processor-vsphere-template",
    visibility = ["//visibility:private"],
    deps = [
        "//packer-post-processor-vsphere-template/vendor/github.com/hashicorp/packer/helper/config:go_default_library",
        "//packer-post-processor-vsphere-template/vendor/github.com/hashicorp/packer/packer:go_default_library",
        "//packer-post-processor-vsphere-template/vendor/github.com/hashicorp/packer/template/interpolate:go_default_library",
        "//packer-post-processor-vsphere-template/vendor/github.com/mitchellh/packer/packer/plugin:go_default_library",
        "//packer-post-processor-vsphere-template/vendor/github.com/vmware/govmomi/find:go_default_library",
        "//packer-post-processor-vsphere-template/vendor/github.com/vmware/govmomi/object:go_default_library",
        "//packer-post-processor-vsphere-template/vendor/github.com/vmware/govmomi/ovf:go_default_library",
        "//packer-post-processor-vsphere-template/vendor/github.com/vmware/govmomi/session:go_default_library",
        "//packer-post-processor-vsphere-template/vendor/github.com/vmware/govmomi/vim25:go_default_library",
        "//packer-post-processor-vsphere-template/vendor/github.com/vmware/govmomi/vim25/progress:go_default_library",
        "//packer-post-processor-vsphere-template/vendor/github.com/vmware/govmomi/vim25/soap:go_default_library",
        "//packer-post-processor-vsphere-template/vendor/github.com/vmware/govmomi/vim25/types:go_default_library",
    ],
)

go_binary(
    name = "packer-post-processor-vsphere-template",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
